new post and remove anchor tag underline

--- a/_posts/guild_management/2022-10-24-6.md
+++ b/_posts/guild_management/2022-10-24-6.md
@@ -13,3 +13,114 @@ last_modified_at: 2022-10-24T18:59:30+09:00
 
 ---
 
+이번에는 관리자 로그인과 로그인에 사용될 Spring Security 설정을 확인하겠습니다.  
+스프링 시큐리티를 이용한 로그인은 form 로그인과 jwt를 이용한 로그인등 여러가지가 있지만 이번에는 아이디와 패스워드를 이용한 form 로그인을 이용했습니다.
+[SecurityConfig 깃허브](https://github.com/Sadowbass/dalsom-management-application/blob/main/src/main/java/com/dalsom/management/common/config/SecurityConfig.java)  
+<br>
+먼저 스프링 시큐리티를 이용해서 로그인할때는 password가 PasswordEncoder의 구현체로 반드시 암호화 되어있어야 합니다.  
+전 스프링에서 이미 구현해둔 BCryptPasswordEncoder를 이용하였습니다.  
+Bean 등록은 별도의 설정 클래스에서 선언해도 되지만 시큐리티에서 사용되는 Bean이니 전 SecurityConfig 클래스에서 등록하였습니다.  
+스프링 시큐리티 5.7.0 이전에는 WebSecurityConfigurerAdapter를 구현해서 등록하는 방식이었으나 해당 방식은 deprecate 되었고  
+이후 버전부터 SecurityFilterChain과 WebSecurityCustomizer를 각각 bean으로 등록하는 방식으로 변경되었습니다.
+<br>
+먼저 http 관련 설정을 먼저 해보겠습니다.  
+```java
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
+        httpSecurity.csrf().disable();
+        httpSecurity.authorizeRequests()
+                .antMatchers("/", "/login", "/join").permitAll()
+                .anyRequest().hasAnyRole("DEVELOPER", "MASTER", "ADMIN")
+                .and()
+                .formLogin()
+                .loginPage("/login").loginProcessingUrl("/login").usernameParameter("loginId")
+                .defaultSuccessUrl("/")
+                .failureHandler((request, response, exception) -> {
+                    if (exception instanceof DisabledException) {
+                        request.setAttribute("error", "아직 승인되지 않았습니다. 관리자, 개발자에게 문의하세요");
+                    } else if (exception instanceof BadCredentialsException) {
+                        request.setAttribute("error", "ID 혹은 PW가 틀립니다");
+                    }
+                    request.getRequestDispatcher("/login-failed").forward(request, response);
+                });
+
+        return httpSecurity.build();
+    }
+```
+httpSecurity.csrf를 사용하지 않도록 설정해줍니다.  
+csrf는 cross site request forgery의 약자이며 사이트간 요청 위조의 의미입니다.  
+제가 만든 사이트와 똑같이 생긴 가짜 사이트 혹은 낚시 사이트를 만들어서 사용자가 요청한 내용이 아닌 공격자가 원하는 위조된 요청을 하는 공격방식입니다.  
+단일 사이트에서만 작동하는 애플리케이션이라면 시큐리티가 제공하는 csrf 공격을 방어하는 기능을 이용하면 좋겠지만 저는 차후 기능들의 REST API도 만들어볼까 하여 해당 기능을 꺼주었습니다.  
+스프링 시큐리티에서 csrf 공격을 방어하는 방식은 아래의 링크에서 확인할 수 있습니다.  
+[spring.io](https://docs.spring.io/spring-security/reference/features/exploits/csrf.html)  
+<br>
+요약하자면 GET을 제외한 토큰을 삽입하고 요청시 삽입한 CSRF 토큰을 검증하는 방식입니다.  
+그래서 상태가 없는 REST API에서는 사용할 수 없는 방법입니다.  
+<br>
+그 다음 각 권한에 따른 요청을 인가하는 코드들입니다.  
+`.antMatchers("/", "/login", "/join").permitAll()` 해당 요청은 인증과 권한에 상관없이 누구나 접근할 수 있게 설정하고 
+그외 모든 요청은 특정 권한이 있어야 접근할 수 있도록 `.anyRequest().hasAnyRole("DEVELOPER", "MASTER", "ADMIN")`으로 설정합니다.  
+개발자, 길드마스터, 운영진 권한이 있어야 나머지 모든 요청을 받아준다는 의미로 보시면 됩니다.  
+그리고 form 로그인을 이용함으로 formLogin을 설정하고 로그인 페이지 경로를 설정합니다.  
+권한이 필요한 요청시 로그인이 되어있지 않다면 자동으로 해당 경로로 리다이렉트 시키게 됩니다.  
+그 뒤는 로그인시 form 요청경로이며 POST로 요청됩니다.  
+로그인 form에서 로그인 요청을 할때 아이디는 username, 비밀번호는 password가 기본 name이나 저는 username이 아닌 loginId라는 name을 이용함으로 설정해줍니다.  
+password 필드는 기본 name인 password 그대로 사용하였습니다.  
+그 후 로그인에 성공하였을때 redirect 시킬 경로를 입력합니다.  
+<br>
+그 다음이 중요한데 `.failureHandler()`를 설정해 주어야 합니다.  
+기본적으로 로그인 실패시 로그인 페이지로 돌아가는 기능이 있기는 한데 전 로그인 페이지에서 어떠한 이유로 로그인을 실패하였는지 출력을 해주고 싶었고 
+thymeleaf에서 BindingResult를 이용해서 필드에 에러메세지를 출력하는 형태이기 때문에 별도로 작성하였습니다.  
+`failureHandler(AuthenticationFailureHandler authenticationFailureHandler)`의 파라미터 AuthenticationFailureHandler는 
+구현해야할 메소드가 하나뿐인 functional interface이니 람다로 깔끔하게 만들어 보았습니다.  
+흔히 보이는 HttpServletRequest와 HttpServletResponse외 AuthenticationException이 같이 들어오는데 상황에 따른 exception들이 이미 구현이 되어 있습니다.  
+![AuthenticationException 구현체들](/assets/images/guild_management/6/exceptions.png)  
+<br>
+이중에서 저는 id 혹은 pw가 틀렸을때의 exception인 `BadCredentialException`과 아직 승인되지 않았을때의 exception인 DisabledException의 처리를 해주었습니다.  
+그 외의 exception은 별도로 처리 하지 않았으나 UserDetails에서 나머지 exception이 발생하지 않도록 만들어 놓았기때문에 괜찮습니다.  
+그 후 RequestDispatcher의 .forward()를 이용해서 해당 경로로 이동시켜줍니다.  
+redirect를 이용하면 등록해놓은 에러메시지등이 전부 사라지니 forward를 이용합니다.  
+```java
+    //AdminLoginController의 일부 코드
+
+    @PostMapping("/login-failed")
+    public String loginFailed(@ModelAttribute("form") @Valid AdminForm form, BindingResult result, HttpServletRequest request) {
+        Object error = request.getAttribute("error");
+        if (!ObjectUtils.isEmpty(error)) {
+            result.addError(new ObjectError("form", error.toString()));
+        }
+
+        return "login-form";
+    }
+```  
+failureHandler에서 forward 시킨 컨트롤러의 메소드입니다.  
+request에 담은 error 메시지를 BindingResult에 넣고 로그인 페이지로 돌려주고 화면에서는 에러를 보여줍니다.  
+<br>
+http 설정은 이정도로 끝이 났고 web에서 static resource들은 별도의 인증, 인가 없이 제공할 예정으로 해당 설정을 해줍니다.  
+```java
+    @Bean
+    public WebSecurityCustomizer webSecurityCustomizer() {
+        return web -> web.ignoring().requestMatchers(PathRequest.toStaticResources().atCommonLocations());
+    }
+```  
+스프링의 resources/static에 존재하는 자원을 요청할때는 security 설정과 상관없이 통과되도록 해줍니다.  
+이때 브라우저에서 favicon.ico를 요청하는데 해당 아이콘이 없거나 별도로 처리하는 컨트롤러가 없으면 에러가 발생합니다.  
+![favicon.ico error](/assets/images/guild_management/6/favicon-error.png)  
+처음엔 이게 무슨 에러인가 했다가 개발자 도구의 network에서 확인하니 favicon.ico 요청시 404가 발생하였고 
+규격에 맞는 아무 이미지나 넣으니 그 후로 더이상 발생하지 않았습니다.  
+<br>
+마지막
+```java
+    @Bean
+    public GrantedAuthorityDefaults grantedAuthorityDefaults() {
+        return new GrantedAuthorityDefaults("");
+    }
+```  
+이부분은 원래 권한 확인시 앞에 접두사로 ROLE_이라는 문자열이 붙게되어 있는데 
+제가 만든 애플리케이션에서는 권한에서 해당 접두사를 사용하지 않기 때문에 prefix를 없애주는 부분입니다.  
+<br>
+스프링 시큐리티를 처음 사용해보아서 실제로 현업에서 시큐리티를 쓸때 이것과 다른 방식으로 사용되는지는 잘 모르고 사용된 부분이 많습니다.  
+인프런에 무료로 공개된 security 강의를 참고하였으며[(링크)](https://www.inflearn.com/course/%EC%8A%A4%ED%94%84%EB%A7%81%EB%B6%80%ED%8A%B8-%EC%8B%9C%ED%81%90%EB%A6%AC%ED%8B%B0/dashboard) 
+아직 security의 설정이 끝나지 않았습니다.  
+아이디와 패스워드를 어디서 어떻게 가져올것인지 가져온 유저정보를 어떻게 저장하고 어떻게 검증하는지를 설정하는 User와 UserDetails는 다음 포스트에서 확인해 보겠습니다.  
+
